fixing overflow issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -193,7 +193,7 @@ video {
   right: 0;
   bottom: 0;
   min-width: 100vw;
-  min-height: 100%;
+  min-height: 100vh;
   z-index: -1;
 }
 @media (max-width: 55rem) {
